--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "-My TODO\r user->\r myTodo/add-todo\r myTodo/\r myTdo/dlt-todo",
   "dependencies": {
     "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
