--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
+
+JWT_USER_PASSWORD = "Vivek123",
 MONGO_URL = mongodb+srv://viveksanandiya787:mT6mqcz8pOZeGU5i@cluster0.7f2f6.mongodb.net/todo-copy
